Working sidebar navigation

--- a/posts/Python/Floating-Point.ipynb
+++ b/posts/Python/Floating-Point.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "93d35978",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Floating Point Arithmetics\n",
+    "order: 2\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "462d2fbd",
    "metadata": {},
    "source": [
