--- a/posts/Python/finger_exercises.ipynb
+++ b/posts/Python/finger_exercises.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c8bbea55",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Textbook Finger Exercises\n",
+    "order: 1\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd675dfe",
    "metadata": {},
    "source": [
