--- a/posts/Python/lists_mutability_cloning.ipynb
+++ b/posts/Python/lists_mutability_cloning.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba6de913",
+   "id": "aadc1d71",
    "metadata": {},
    "source": [
-    "# Lists, Mutability and Cloning"
+    "---\n",
+    "title: Lists, Mutability and Cloning\n",
+    "order: 3\n",
+    "---"
    ]
   },
   {
