Change Home and title

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,15 @@
 ---
-title: "quartoblog"
+title: "Home"
 ---
 
-This is a Quarto website.
+This is my personal datascience portfolio blog. I write this with these purposes in mind:
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+1. To show my potential employers some of my knowledge and skills (though this blog is incomplete for this purpose).
+2. For me to have sort of a library of topics that I might want to get back to later. (It happenes to me from time to time that I need to use a concept that I know I learned and once understood, but it was a long time ago and I don't ember all the details.)
+3. To refresh my skills and knowledge and to kick start my datascience thinking again (see more in the upcoming article *About me*).
+4. To fulfill my long-term dream of writing a datascience blog.
+
+
+I'm not fully documenting my whole datascience journey here. At least not now. I'm only including topics that I'm struggling with (and I learn them by writing about them) or I think are worth having here due to other reasons.
+
+Also, I'm not focusing on the beauty of the blog. Creating websites is not something I'm good at or even interested in. That is why I want a simple blog that allows me to focus on the content.
