Improve post: Mutability and Cloning

--- a/posts/Python/mutability_and_cloning.ipynb
+++ b/posts/Python/mutability_and_cloning.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Lists, Mutability and Cloning\n",
+    "title: Mutability and Cloning\n",
     "order: 3\n",
     "---"
    ]
@@ -35,11 +35,14 @@
    "metadata": {},
    "source": [
     "This is foundational to understand the whole mutability and cloning thing. As far as I know, variables (or names), pointers (or references) and objects are three *completely different things*.\n",
+    "\n",
     "- Variables live in a namespace. A namespace is a mapping (we can think of it as a `dict`) from *variables* to *pointers*. So a variable is basically a label of a pointer.\n",
     "- Pointers point to a location in memory. I think of them as memory addreses.\n",
-    "- An object is the actual thing on location in memory.\n",
+    "- An object is the actual thing on the location in memory.\n",
     "\n",
-    "So, to sum this up, variables map to pointers and pointers map to objects. It is common to think that \"variables are just names for objects\". Also, I found on the internet the sentences \"variables are names associated with concrete objects\" or \"variable is essentially a name that is assigned to a value\". No, that's incorrect. A variable is a name (in a namespace) of a *pointer*. And that pointer points to a location in memory where an object can be found. That object has then a value (along with a type and an identity). But a namespace isn't the only place we can found pointers."
+    "So, to sum this up, variables map to pointers and pointers map to objects.\n",
+    "\n",
+    "It is common to think that \"variables are just names for objects\". Also, I found on the internet sentences like \"variables are names associated with concrete objects\" or \"variable is essentially a name that is assigned to a value\". No, that's incorrect. A variable is a name of a *pointer*. And that pointer points to a location in memory where an object can be found. That object has then a value (along with a type and an identity). But a namespace isn't the only place we can found pointers."
    ]
   },
   {
@@ -55,7 +58,7 @@
    "id": "df05e5be",
    "metadata": {},
    "source": [
-    "Once we understand the differences between varaibles, pointers and objects, now comes the most important part: lists only contain pointers. Not objects. Not variables. Pointers. A list is internally basically an array, where each item in the array is a pointer to a memory location.\n",
+    "Once we understand the differences between varaibles, pointers and objects, now comes the key to understand lists: Lists only contain pointers. Not objects. Not variables. Pointers. A list is internally basically an array, where each item in the array is a pointer to a memory location.\n",
     "\n",
     "The pointer, as an element of a list, can be created either implicitely, or explicitely. If we type `L = ['a']`, this is what I call an implicit creation of a pointer. Internally, two new objects are created at two different memory locations: The string `'a'` and a new list. A pointer to the string `'a'` is placed as the first element of the new list. And a pointer to the new list is placed in the current namespace and is assigned the label `L`.\n",
     "\n",
@@ -64,7 +67,9 @@
     "A = 'a'\n",
     "L = [A]\n",
     "```\n",
-    "First, a new object (the string `'a'`) is created in memory and its pointer is placed to the current namespace with the label `A`. Second, a new list is created, its first element is the pointer that is named `A` and a pointer to this new list is placed to the namespace under the name `L`."
+    "First, a new object (the string `'a'`) is created in memory and its pointer is placed to the current namespace with the label `A`. Second, a new list is created, its first element is the pointer that is named `A` and a pointer to this new list is placed to the namespace under the name `L`.\n",
+    "\n",
+    "I think the situation is very similar for dictionaries and sets, meaining they always only contain pointers, but I'm not 100% sure here."
    ]
   },
   {
@@ -80,9 +85,9 @@
    "id": "46c0bfab",
    "metadata": {},
    "source": [
-    "Mutation is the ability of some python objects (types of objects) to change. Numbers, strings or tuples are examples of immutable types. Once objects of these types are created, they cannot be changed. Any pointers that point to such objects will always point to the same unchanged objects.\n",
+    "Mutation is the ability of some python objects (types of objects) to change. Numbers, strings, tuples, bools or ranges are examples of immutable types. Once objects of these types are created, they cannot be changed. Any pointers that point to such objects will always point to the very same unchanged objects.\n",
     "\n",
-    "Examples of mutable types are lists, dictionaries or sets. After they are created, they can be changed (extended, shortened, changed elements etc.). If multiple pointers point to such an object, the change made via one pointer is visible via all other pointers:"
+    "Examples of mutable types are lists, dictionaries or sets. After they are created, they can be changed (extended, shortened, replaced elements etc.). If multiple pointers point to such an object, a change made through one pointer is visible through all other pointers:"
    ]
   },
   {
@@ -127,7 +132,7 @@
    "id": "8e7ff03f",
    "metadata": {},
    "source": [
-    "I learned this only after many years of using Python and it blew my mind. Lists contain pointers, ok. But there are not limitations on those pointers. In particular, nothing prevents a list to cointain a pointer to itself:"
+    "I learned this only after many years of using Python and it blew my mind. Lists contain pointers, ok. But there are no limitations on those pointers. In particular, nothing prevents a list to cointain a pointer to itself:"
    ]
   },
   {
@@ -155,7 +160,7 @@
    "id": "39ebcc02",
    "metadata": {},
    "source": [
-    "In this example, the second element of the list `L1` is a pointer that points to memory location where the list `L1` is located. The interactive python shell has a particular way of letting you know this once you try to print that list: It prints the string '[...]' as the second element of the list, where the pointer to itself is. Surprisingly, one can normally iterate over that list:"
+    "In this example, the second element of the list `L1` is a pointer that points to memory location where the list `L1` is located. The interactive python shell has a particular way of letting you know this once you try to print that list: It prints the string `[...]` as the second element of the list, where the pointer to itself is. Surprisingly, one can normally iterate over that list:"
    ]
   },
   {
@@ -278,22 +283,29 @@
    "id": "34b1381d",
    "metadata": {},
    "source": [
-    "We can test the \"default value is created at a function definition time\" claim like this. The string `'here!'` is not printed until the function `append_val` is defined. And that function is not defined until the default value of `param2` is created and that value is not created until the function `long_computation` finishes creating it."
+    "We can test the \"default value is created at a function definition time\" claim like this. The string `'here!'` is not printed until the function `append_val` is defined. And that function is not defined until the default value of `param2` is created and that value is not created until the function `create_default_val` finishes creating it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a842b05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside create_default_val\n",
+      "here!\n"
+     ]
+    }
+   ],
    "source": [
-    "def long_computation():\n",
-    "    x = 0\n",
-    "    for i in range(int(1e10)):\n",
-    "        x += 0\n",
+    "def create_default_val():\n",
+    "    print('Inside create_default_val')\n",
     "\n",
-    "def append_val(val, list_1 = [], param2 = long_computation()):\n",
+    "def append_val(val, list_1 = [], param2 = create_default_val()):\n",
     "    list_1.append(val)\n",
     "\n",
     "print('here!')"
@@ -309,14 +321,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "461a0f11",
-   "metadata": {},
-   "source": [
-    "I'm not sure about the exact terminology here. Does \"cloning\" refer to only shallow copy or both shallow and deep copy? Anyway, I will try to explicitely state what kind of copy I mean each time."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8a633366",
    "metadata": {},
    "source": [
@@ -327,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "783a2ba3",
    "metadata": {},
    "outputs": [
@@ -335,112 +339,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1640577203152\n",
-      "1640577203152\n",
-      "-------\n",
-      "140710899286984\n",
-      "140710899286984\n",
-      "-------\n",
-      "140710898401712\n",
-      "140710898401712\n",
-      "-------\n",
-      "140710898401776\n",
-      "140710898401776\n",
-      "-------\n",
-      "1640673096160\n",
-      "1640673096160\n",
-      "-------\n",
-      "1640673251568\n",
-      "1638533141008\n",
-      "-------\n",
-      "1640676037040\n",
-      "1640674705520\n"
+      "'abc'\n",
+      "   1592388385840\n",
+      "   1592388385840\n",
+      "2\n",
+      "   140703871009736\n",
+      "   140703871009736\n",
+      "True\n",
+      "   140703870124464\n",
+      "   140703870124464\n",
+      "None\n",
+      "   140703870124528\n",
+      "   140703870124528\n",
+      "range(10)\n",
+      "   1592486025168\n",
+      "   1592486025168\n",
+      "3.14\n",
+      "   1592480060080\n",
+      "   1592483131696\n",
+      "   True\n",
+      "(2,)\n",
+      "   1592486316928\n",
+      "   1592485965792\n",
+      "   True\n"
      ]
     }
    ],
    "source": [
-    "print(id('abc'))\n",
-    "print(id('abc'))\n",
-    "print('-------')\n",
-    "print(id(2))\n",
-    "print(id(2))\n",
-    "print('-------')\n",
-    "print(id(True))\n",
-    "print(id(True))\n",
-    "print('-------')\n",
-    "print(id(None))\n",
-    "print(id(None))\n",
-    "print('-------')\n",
-    "print(id(range(10)))\n",
-    "print(id(range(10)))\n",
-    "print('-------')\n",
-    "print(id(3.14))\n",
-    "print(id(3.14))\n",
-    "print('-------')\n",
-    "print(id((2,)))\n",
-    "print(id((2,)))"
+    "print('\\'abc\\'')\n",
+    "print('  ', id('abc'))\n",
+    "print('  ', id('abc'))\n",
+    "print('2')\n",
+    "print('  ', id(2))\n",
+    "print('  ', id(2))\n",
+    "print('True')\n",
+    "print('  ', id(True))\n",
+    "print('  ', id(True))\n",
+    "print('None')\n",
+    "print('  ', id(None))\n",
+    "print('  ', id(None))\n",
+    "print('range(10)')\n",
+    "print('  ', id(range(10)))\n",
+    "print('  ', id(range(10)))\n",
+    "print('3.14')\n",
+    "print('  ', id(3.14))\n",
+    "print('  ', id(3.14))\n",
+    "print('  ', id(float(3.14)) == id(float(3.14)))\n",
+    "print('(2,)')\n",
+    "print('  ', id((2,)))\n",
+    "print('  ', id((2,)))\n",
+    "print('  ', id((2,)) == id((2,)))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6561c039",
+   "id": "893ff13b",
    "metadata": {},
    "source": [
-    "I'm not 100% sure if I can generalize like this, but I will :).\n",
-    "1) All instances of `str`, `int`, `bool` and `NoneType` and `range` types that have the same value are the same object.\n",
-    "2) Instances of `float` and `tuple` types, even if they have the same value, are different objects.\n",
+    "It is important to mention here that these results are not universal. For example, in an online python compiler I tried, ranges that had the same value vere in fact different objects. Nevertheless, it is worth keeping in mind that:\n",
     "\n",
-    "BUT, this surprisingly yields `True`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ff73b6c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(id((2,)) == id((2,)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9211bdf3",
-   "metadata": {},
-   "source": [
-    "I guess it means that the same tuples created in a single expression are the same object, but tuples created in different expressions are different objects... But I honestly don't know.\n",
+    "- Different instances (with the same value) of some built-in immutable types *can be* the very same object.\n",
+    "- For some types, this can be true only for instances created as part of a single expression (e.g. `id(3.14) == id(3.14)`); for other types both instances can be created even in separate expressions.\n",
     "\n",
-    "Similarly, two `float` instances that actually represent the same integer are the same object when created in a single expression, but different object when created individually:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "12c62e09",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1640673251568\n",
-      "1640673251440\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(id(float(2)))\n",
-    "print(id(float(2)))\n",
-    "print(id(float(2)) == id(float(2)))"
+    "This behavior of Python is called *interning* and it is of course performed to improve efficiency. There is also a function of the module `sys`, called `sys.intern` (see [here](https://docs.python.org/3/library/sys.html#sys.intern)), that can intern a string on demand. \n",
+    "\n",
+    "Btw this [article](https://www.geeksforgeeks.org/python/object-interning-in-python/) on GeeksForGeeks says that for integers, interning only happens for values between -5 and 256."
    ]
   },
   {
