Up to Nesting of Scopes

--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -116,11 +116,11 @@
     "- First, two functions are defined in the global scope.\n",
     "- Then, the variable `x` is assigned the value 1 and the `outerfn` function is called.\n",
     "- In the scope of the `outerfn` function, the local variable `x` is defined and assigned the value 2.\n",
-    "- The `innerfn` function is called in the scope of `outerfn`.\n",
+    "- In the scope of the `outerfn` function, the `innerfn` function is called.\n",
     "- The `innerfn` function, upon calling, creates its own scope (third so far).\n",
     "- The variable `x` is referenced in this bottom-most level.\n",
-    "- It is not found there, so Python goes search the scope within which `innerfn` is defined (which is the global scope here). The middle scope (the scope of `outerfn`) is completely skipped. Yes, `innerfn` is called from here, but that doesn't matter.\n",
-    "- The scope in which `innerfn` is defined - the global scope - does contain the variable `x`, so it is found and the value $2$ is used.\n",
+    "- It is not found locally, so Python goes search the scope within which `innerfn` is defined (which is the global scope here). The middle scope (the scope of `outerfn`) is completely skipped. Yes, `innerfn` is called from here, but that doesn't matter.\n",
+    "- The scope in which `innerfn` is defined - the global scope - does contain the variable `x`, so it is found and the value $2$ is used. If it wasn't found, the built-in scope would be searched.\n",
     "- The value $2$ is printed, `innerfn` returns and its scope pops.\n",
     "- `outerfn` returns and its scope pops."
    ]
