All except Wehat Creates a Scope

--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -16,7 +16,7 @@
    "id": "90a18d8f",
    "metadata": {},
    "source": [
-    "In this article we will discuss two python keywords - `global` and `nonlocal` - and scoping. Scoping can be especially hard and I cannot rule out that there are no errors in this text. For example, I wasn't able to find an official definition of a scope even in The Python Language Reference. So as always, this text is a mix of about how I understand the topic and what I was able to find and verify (no ChatGPT-only answers)."
+    "In this article we will discuss two python keywords - `global` and `nonlocal` - and scoping."
    ]
   },
   {
@@ -32,13 +32,13 @@
    "id": "12ff869f",
    "metadata": {},
    "source": [
-    "A scope is a block of code in which variables can be visible. A namespace is a mapping that defines variables. Each scope has its own namespace.\n",
+    "A scope is a block of code in which variables can be visible. A namespace is a table that defines variables (a mapping from names to objects). Each scope has its own namespace.\n",
     "\n",
-    "A global scope is the one at the level of a module. That is also the level that your IPython shell is in when you start a new one. Any variable you define at this level is a *global variable*.\n",
+    "A global scope is the one at the level of a module. This is also the level that your IPython shell is in when you start a new one. Any variable you define at this level is a *global variable*.\n",
     "\n",
-    "Inside this scope you can create an inner scope, for example by defining a function. And now things start to be interesting. Let's assume we are in the scope of this function. Now, the current scope is called *local* scope and the outer scope (which also happens to be the global scope in this case) is called *nonlocal* scope.\n",
+    "Inside this scope you can create an inner scope, for example by defining a function. And now things start to be interesting. Let's assume we are in the scope of this function. Now, the current scope is called a *local* scope and the outer scope (which also happens to be the global scope in this case) is called a *nonlocal* scope.\n",
     "\n",
-    "This terminology holds for any number of nested scopes: The current scope is *local*, the closest higher scope is *nonlocal* and the top-most scope is *global*."
+    "This terminology holds for any number of nested scopes: The current scope is always *local*, the closest higher scope is *nonlocal* and the top-most scope is *global*."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "27ef7c2d",
    "metadata": {},
    "source": [
-    "## Types of Scopes"
+    "## Types of Scopes and LEGB"
    ]
   },
   {
@@ -61,8 +61,22 @@
     "- nonlocal (recursive)\n",
     "- local\n",
     "\n",
-    "This means that when a variable is referenced in a local scope, Python first looks for it in the local scope. If it isn't found there the nearest enclosing scope is searched (the nonlocal scope). If it is not found there then the next higher scope is searched and so on, until a global scope is reached. If a variable is not found in the global scope, the built-in scope is searched. If the variable is not even here, a NameError is raised."
+    "This means that when a variable is referenced in a local scope, Python first looks for it in the local scope. If it isn't found there the nearest enclosing scope is searched (the nonlocal scope). If it is not found there then the next higher scope is searched and so on, until a global scope is reached. If a variable is not found in the global scope, the built-in scope is searched. If the variable is not even here, a NameError is raised. This lookup process is called the *LEGB rule* - from Local, Enclosing, Global, Built-in."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d56949f4",
+   "metadata": {},
+   "source": [
+    "## What Creates a Scope"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9bb5034",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -77,7 +91,7 @@
    "id": "b735e779",
    "metadata": {},
    "source": [
-    "It is important to remind here that nested scopes are created by *defining* new functions (or classes etc., see below), NOT by calling them. For example, these are not nested scopes, the function `innerfn` isn't actually \"inner\" and the function `outerfn` isn't actually \"outer\". They are same-level functions, just called from one another. They do not create nested scopes."
+    "It is important to remind here that nested scopes are created by *defining* new functions (or classes etc., see above), NOT by calling them. For example, these are not nested scopes, the function `innerfn` isn't actually \"inner\" and the function `outerfn` isn't actually \"outer\". They are same-level functions, just called from one another. They do not create nested scopes."
    ]
   },
   {
@@ -154,7 +168,7 @@
    "id": "aa438531",
    "metadata": {},
    "source": [
-    "## Manipulating Variable Lookup"
+    "## Keywords `global` and `local`"
    ]
   },
   {
@@ -162,7 +176,7 @@
    "id": "ca46f17f",
    "metadata": {},
    "source": [
-    "So far we have seen that a variable is iteratively searched for from the local scope to the built-in scope until it is found and the corresponding value is used. By the way, it means that variables defined in higher-level scopes are *read-only* in lower scopes. I mean, we can use the variables in the lower scopes, but we cannot change them. Any attempt to change a variable defined in a higher level would mean we change the variable only in the local level:"
+    "So far we have seen that a variable is iteratively searched for from the local scope to the built-in scope until it is found and the corresponding value is used. By the way, it means that variables defined in higher-level scopes are *read-only* in lower-level scopes. I mean, we can use the variables in the lower-level scopes, but we cannot change them. Any attempt to change a variable defined in a higher-level scope would mean we change the variable only in the local scope:"
    ]
   },
   {
@@ -311,7 +325,7 @@
    "id": "b251ba30",
    "metadata": {},
    "source": [
-    "We can even change the global variable from the inner scopes:"
+    "We can even change the global variable from the inner scope:"
    ]
   },
   {
@@ -359,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "19f1258c",
    "metadata": {},
    "outputs": [
@@ -394,49 +408,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa5b3ef",
-   "metadata": {},
-   "source": [
-    "One interesting thing with the `nonlocal` keyword is that they can be chained:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "dad6888f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inside fn3: x = 3\n",
-      "inside fn2: x = 3\n",
-      "inside fn1: x = 3\n",
-      "inside global scope: x = 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 0\n",
-    "def fn1():\n",
-    "    x = 1\n",
-    "    def fn2():\n",
-    "        nonlocal x\n",
-    "        def fn3():\n",
-    "            nonlocal x\n",
-    "            x = 3\n",
-    "            print(f'inside fn3: {x = }')\n",
-    "        fn3()\n",
-    "        print(f'inside fn2: {x = }')\n",
-    "    fn2()\n",
-    "    print(f'inside fn1: {x = }')\n",
-    "fn1()\n",
-    "print(f'inside global scope: {x = }')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f17564d4",
    "metadata": {},
    "source": [
@@ -448,7 +419,7 @@
    "id": "5fc10d16",
    "metadata": {},
    "source": [
-    "There is another way to access global namespace from within a lower-level scope: The built-in function `globals`. Its documentation speaks for itself."
+    "There is another way to access the global namespace from within a lower-level scope: The built-in function `globals`. Its documentation speaks for itself."
    ]
   },
   {
