All except What Creates a Scope

--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "deb250f0",
    "metadata": {},
    "outputs": [
@@ -338,15 +338,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "at the start of global scope: x = 0\n",
       "inside fn3: x = 3\n",
       "inside fn2: x = 2\n",
       "inside fn1: x = 1\n",
-      "inside global scope: x = 3\n"
+      "at the end of global scope: x = 3\n"
      ]
     }
    ],
    "source": [
     "x = 0\n",
+    "print(f'at the start of global scope: {x = }')\n",
     "def fn1():\n",
     "    x = 1\n",
     "    def fn2():\n",
@@ -360,7 +362,7 @@
     "    fn2()\n",
     "    print(f'inside fn1: {x = }')\n",
     "fn1()\n",
-    "print(f'inside global scope: {x = }')"
+    "print(f'at the end of global scope: {x = }')"
    ]
   },
   {
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "19f1258c",
    "metadata": {},
    "outputs": [
@@ -381,8 +383,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "at the start of fn2: x = 2\n",
       "inside fn3: x = 3\n",
-      "inside fn2: x = 3\n",
+      "at the end of fn2: x = 3\n",
       "inside fn1: x = 1\n",
       "inside global scope: x = 0\n"
      ]
@@ -394,9 +397,51 @@
     "    x = 1\n",
     "    def fn2():\n",
     "        x = 2\n",
+    "        print(f'at the start of fn2: {x = }')\n",
     "        def fn3():\n",
     "            nonlocal x\n",
     "            x = 3\n",
+    "            print(f'inside fn3: {x = }')\n",
+    "        fn3()\n",
+    "        print(f'at the end of fn2: {x = }')\n",
+    "    fn2()\n",
+    "    print(f'inside fn1: {x = }')\n",
+    "fn1()\n",
+    "print(f'inside global scope: {x = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2d7a04b",
+   "metadata": {},
+   "source": [
+    "If we use `nonlocal x` and the variable `x` isn't found in the nonlocal namespace, the search continues to higher enclosing scopes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0323984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside fn3: x = 1\n",
+      "inside fn2: x = 1\n",
+      "inside fn1: x = 1\n",
+      "inside global scope: x = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "def fn1():\n",
+    "    x = 1\n",
+    "    def fn2():\n",
+    "        def fn3():\n",
+    "            nonlocal x\n",
     "            print(f'inside fn3: {x = }')\n",
     "        fn3()\n",
     "        print(f'inside fn2: {x = }')\n",
@@ -404,6 +449,112 @@
     "    print(f'inside fn1: {x = }')\n",
     "fn1()\n",
     "print(f'inside global scope: {x = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9f30f7",
+   "metadata": {},
+   "source": [
+    "But the search stops just before the global scope. If we declare a variable to be nonlocal, it cannot be global:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b5379b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "no binding for nonlocal 'x' found (1600454748.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mnonlocal x\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m no binding for nonlocal 'x' found\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "def fn1():\n",
+    "    def fn2():\n",
+    "        def fn3():\n",
+    "            nonlocal x\n",
+    "            print(f'inside fn3: {x = }')\n",
+    "        fn3()\n",
+    "        print(f'inside fn2: {x = }')\n",
+    "    fn2()\n",
+    "    print(f'inside fn1: {x = }')\n",
+    "fn1()\n",
+    "print(f'inside global scope: {x = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19ad28dc",
+   "metadata": {},
+   "source": [
+    "This differs from the global keyword, because when a varaible is declared global but not found in the global namespace, the next scope - built-in - *is* searched."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "30704de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside fn3: sum = <built-in function sum>\n",
+      "inside fn2: sum = <built-in function sum>\n",
+      "inside fn1: sum = <built-in function sum>\n",
+      "inside global scope: sum = <built-in function sum>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fn1():\n",
+    "    def fn2():\n",
+    "        def fn3():\n",
+    "            global sum\n",
+    "            print(f'inside fn3: {sum = }')\n",
+    "        fn3()\n",
+    "        print(f'inside fn2: {sum = }')\n",
+    "    fn2()\n",
+    "    print(f'inside fn1: {sum = }')\n",
+    "fn1()\n",
+    "print(f'inside global scope: {sum = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "856b6d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "no binding for nonlocal 'sum' found (3402508922.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mnonlocal sum\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m no binding for nonlocal 'sum' found\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fn1():\n",
+    "    def fn2():\n",
+    "        def fn3():\n",
+    "            nonlocal sum\n",
+    "            print(f'inside fn3: {sum = }')\n",
+    "        fn3()\n",
+    "        print(f'inside fn2: {sum = }')\n",
+    "    fn2()\n",
+    "    print(f'inside fn1: {sum = }')\n",
+    "fn1()\n",
+    "print(f'inside global scope: {sum = }')"
    ]
   },
   {
