--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -170,7 +170,7 @@
    "id": "d9bb5034",
    "metadata": {},
    "source": [
-    "New scopes are created by modules, functions, methods, lambda expressions, comprehensions and generator expressions. Surprisingly, classes and their instances do not create new LEGB scopes, their behavior is more complicated. We will talk about that at the end of this post.\n",
+    "New scopes are created by modules, functions, methods, lambda expressions, comprehensions and generator expressions. Surprisingly, classes and their instances do not create new standard LEGB scopes, their behavior is more complicated. We will talk about that at the end of this post.\n",
     "\n",
     "On the other hand, constructs such as `if`, `for`, `while`, `with` and `try - except` (with a small exception) don't create their own scopes.\n",
     "\n",
@@ -184,9 +184,9 @@
    "source": [
     "Modules: Each module has its own (global) scope. I guess there isn't much to say about it.\n",
     "\n",
-    "Functions: Functions are the most important constructs that create new scopes. This includes functions defined in a class body. Instance methods also create new scopes, because they are just class functions to which instances are automatically passed as the first argument.\n",
+    "Functions: Functions are the most important constructs that create new scopes. This includes class functions (functions defined in a class body). Instance methods also create new scopes, because they are just class functions to which instances are automatically passed as the first argument.\n",
     "\n",
-    "Comprehensions and generator expressions: They do create new scopes, but a bit unusual ones, because they of course immediatelly disappear once the expressions finish. I mean, that is not unusual at all, function scopes also immediatelly dissapear once the functions finish. But you get the point. Scopes of comprehensions and generator expressions are just not very interesting."
+    "Comprehensions and generator expressions: They do create new scopes, but a bit unusual ones, because they of course immediatelly disappear once the expressions finish. I mean, this is actually not unusual at all, function scopes also immediatelly dissapear once the functions finish. But you get the point. Scopes of comprehensions and generator expressions are just not very interesting."
    ]
   },
   {
@@ -243,7 +243,7 @@
    "source": [
     "In this case, the `except` block still doesn't define a new scope nor a new namespace, but it does define a new temporary binding for the name defined after `as`. This variable is then NOT visible outside the `except` block.\n",
     "\n",
-    "In the case of `with`, in for example `with open('hello') as f`, the name `f` *is* visible outside the `with` block."
+    "In the case of `with` however, e.g. as in `with open('hello') as f`, the name `f` *is* visible outside the `with` block."
    ]
   },
   {
@@ -564,27 +564,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b5379b85",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inside fn3: x = 0\n",
-      "inside fn2: x = 0\n",
-      "inside fn1: x = 0\n",
-      "inside global scope: x = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "def fn1():\n",
     "    def fn2():\n",
     "        def fn3():\n",
-    "            # nonlocal x  # SyntaxError: no binding for nonlocal 'x' found\n",
+    "            nonlocal x  # SyntaxError: no binding for nonlocal 'x' found\n",
     "            print(f'inside fn3: {x = }')\n",
     "        fn3()\n",
     "        print(f'inside fn2: {x = }')\n",
@@ -635,26 +624,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "856b6d3f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inside fn3: sum = <built-in function sum>\n",
-      "inside fn2: sum = <built-in function sum>\n",
-      "inside fn1: sum = <built-in function sum>\n",
-      "inside global scope: sum = <built-in function sum>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fn1():\n",
     "    def fn2():\n",
     "        def fn3():\n",
-    "            # nonlocal sum  # SyntaxError: no binding for nonlocal 'sum' found\n",
+    "            nonlocal sum  # SyntaxError: no binding for nonlocal 'sum' found\n",
     "            print(f'inside fn3: {sum = }')\n",
     "        fn3()\n",
     "        print(f'inside fn2: {sum = }')\n",
@@ -749,7 +727,7 @@
     "\n",
     "The first thing to know is that scopes of class bodies do not extend to class functions, not even to comprehensions and generator expressions used in class bodies. As a result, class bodies are NOT enclosing scopes for class functions (or instance methods). Also, scopes of class bodies disappear after the class is defined. Names defined in a class body are moved to the attribute dictionary of the class (`__dict__`) after the class is finished defining, but the scope itself disappears. As a result, the scope enclosing class functions (and thus instance methods) is the scope in which the class is defined.\n",
     "\n",
-    "Second important thing is that code in class bodies, unlike code in functions bodies, is evaluated immediately at the class definition time. I mean, code inside a function isn't run until the function is called. But code inside a class is evaluated immediately as the class is being defined.\n",
+    "Second important thing is that code in class bodies, unlike code in functions bodies, is evaluated immediately at the class definition time. I mean, code inside a function isn't run until the function is called. But code inside a class body is evaluated immediately as the class is being defined.\n",
     "\n",
     "Most of the class scoping behavior is determined by these two facts. Let's look at some examples."
    ]
@@ -1022,7 +1000,7 @@
    "id": "5fe26d65",
    "metadata": {},
    "source": [
-    "We can even use `nonlocal` in the class body to reference a variable defined in the enclosing scope (but if we use `nonlocal`, the varaible cannot be global, se we need to nest the class inside a function)."
+    "We can even use `nonlocal` in the class body to reference a variable defined in the enclosing scope (but as we have seen if we use `nonlocal`, the variable cannot be global, se we need to nest the class inside a function)."
    ]
   },
   {
@@ -1100,10 +1078,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a0577706",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside class body\n",
+      "inside global scope\n",
+      "inside class function\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "class C:\n",
     "    print('inside class body')\n",
@@ -1111,7 +1100,7 @@
     "    def f(self):\n",
     "        print('inside class function')\n",
     "        print(C.x)\n",
-    "        print(x)  # NameError: name 'x' is not defined\n",
+    "        # print(x)  # NameError: name 'x' is not defined\n",
     "\n",
     "print('inside global scope')\n",
     "C().f()"
