--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -271,7 +271,7 @@
    "id": "aa438531",
    "metadata": {},
    "source": [
-    "## Keywords `global` and `local`"
+    "## Keywords `global` and `nonlocal`"
    ]
   },
   {
