--- a/posts/Python/global_variables.ipynb
+++ b/posts/Python/global_variables.ipynb
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2a297925",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
     }
    ],
    "source": [
-    "# This workds\n",
+    "# This works\n",
     "class C:\n",
     "    L = [1, 2, 3]\n",
     "    new = [i for i in L]\n",
@@ -962,7 +962,7 @@
    "metadata": {},
    "source": [
     "### Example 4\n",
-    "Though the scope of a class body disappears after the class is defined, until then it is still a normal scope. In particular, it does have access to all enclosing scopes. It also creates a new namespace (that later becomes the class's `__dict__` attribute). But if we we want to reference variables defined in a class body from outside of the class body (that includes class functions), we must access it via the class name. Because as we have seen, class body is not the enclosing scope for class functions."
+    "Though the scope of a class body disappears after the class is defined, until then it is still a normal scope. In particular, it does have access to all enclosing scopes. It also creates a new namespace (that later becomes the class's `__dict__` attribute). But if we we want to reference variables defined in a class body from outside of the class body, we must access it via the class name. Btw \"outside of the class body\" includes class functions, because as we have seen class body is not the enclosing scope for class functions."
    ]
   },
   {
@@ -1045,7 +1045,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2\n",
+      "1\n"
      ]
     }
    ],
@@ -1059,6 +1060,7 @@
     "            print(x)\n",
     "\n",
     "    C().g()\n",
+    "    print(C().x)\n",
     "fn()"
    ]
   },
@@ -1089,22 +1091,32 @@
       "inside class body\n",
       "inside global scope\n",
       "inside class function\n",
-      "1\n"
+      "C.x is 1\n",
+      "x is 2\n"
      ]
     }
    ],
    "source": [
+    "x = 2\n",
     "class C:\n",
     "    print('inside class body')\n",
     "    x = 1\n",
     "    def f(self):\n",
     "        print('inside class function')\n",
-    "        print(C.x)\n",
-    "        # print(x)  # NameError: name 'x' is not defined\n",
+    "        print(\"C.x is\", C.x)\n",
+    "        print(\"x is\", x)\n",
     "\n",
     "print('inside global scope')\n",
     "C().f()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c82d681",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
